# PyData_Leeds

./: README.md
Performance/: .gitignore  README.md  alembic.ini  generate_data.py  mise.toml  post_data.py  presentation.md  pyproject.toml
Performance/notebooks/: benchmarking.py  presentation.py  warehouse.py
Performance/web/: app.py
Performance/web/migrations/: env.py
Performance/web/migrations/versions/: 1a17979a758a_setup_db.py
Titanic/: README.md  Titanic_Workshop_Notebook_Colab.py  Titanic_Workshop_Notebook_Enhanced.ipynb  Titanic_Workshop_Notebook_Start.ipynb  requirements.txt
