[project]
name = "pydata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "duckdb>=1.5.2",
    "faker>=40.13.0",
    "fastavro>=1.12.1",
    "litestar[standard]>=2.21.1",
    "marimo[recommended]>=0.23.1",
    "msgpack>=1.1.2",
    "orjson>=3.11.8",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "python-snappy>=0.7.3",
    "sqlalchemy>=2.0.49",
    "ujson>=5.12.0",
    "zstd>=1.5.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.ruff.lint]
select = [
    "A",     # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",   # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ARG",   # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",     # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "D",     # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DJ",    # https://docs.astral.sh/ruff/rules/#flake8-django-dj
    "DTZ",   # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E",     # https://docs.astral.sh/ruff/rules/#error-e
    "F",     # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "G",     # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I",     # https://docs.astral.sh/ruff/rules/#isort-i
    "N",     # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PERF",  # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PT",    # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "Q",     # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET",   # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RUF",   # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "S",     # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM",   # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "UP",    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W"      # https://docs.astral.sh/ruff/rules/#warning-w
]
ignore = ["D100", "D212", "D203"]

[tool.ruff]
exclude = [
    "notebooks",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
